--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
@@ -4,6 +4,11 @@
             <span>Brakes</span>
         </ion-title>
     </ion-navbar>
+
+    <ion-toolbar  color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL" >
+        <ion-title padding-left>This is a provisional record.</ion-title>
+    </ion-toolbar>
+
   </ion-header>
   
 <ion-content no-padding *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else showTrailerBrakesPage">
