--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -19,6 +19,11 @@
             </button>
         </ion-buttons>
     </ion-navbar>
+
+    <ion-toolbar  color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL" >
+        <ion-title padding-left>This is a provisional record.</ion-title>
+    </ion-toolbar>
+
 </ion-header>
 
 <ion-content no-padding>
@@ -49,7 +54,7 @@
             </div>
         </ion-item>
         <ng-container>
-            <ng-container *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.statusCode, 'current')">
+            <ng-container>
                 <ion-item margin-left>
                     <ion-label>
                         <h3>Chassis make</h3>
