--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -70,19 +70,19 @@
                   detail-none
                   (click)="openTest(vehicle, vehicleTest)"
                   class="bottom-divider"
-                  [ngClass]="{'error-incomplete-item': errorIncomplete && getTestTypeStatus(vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.IN_PROGRESS)}">
+                  [ngClass]="{'error-incomplete-item': errorIncomplete && getTestTypeStatus(vehicle, vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.IN_PROGRESS)}">
             <h3 class="test-type">{{ vehicleTest.testTypeCategoryName }}</h3>
             <p item-end ion-text text-uppercase
                class="test-type-status test-result"
                [color]="commonFunctions.getTestResultColor(vehicleTest.testResult)"
                *ngIf="isTestAbandoned(vehicleTest)">Abandoned</p>
             <h3 item-end class="test-type-status"
-                [ngClass]="{'test-type-inProgress': getTestTypeStatus(vehicleTest) !== commonFunctions.capitalizeString(testCompletionStatus.EDIT)}"
-                *ngIf="!isTestAbandoned(vehicleTest)">{{getTestTypeStatus(vehicleTest)}}</h3>
+                [ngClass]="{'test-type-inProgress': getTestTypeStatus(vehicle, vehicleTest) !== commonFunctions.capitalizeString(testCompletionStatus.EDIT)}"
+                *ngIf="!isTestAbandoned(vehicleTest)">{{getTestTypeStatus(vehicle, vehicleTest)}}</h3>
             <ion-icon item-end class="odometer-reading-icon"
-                      [ngClass]="{'odometer-reading-icon-data': getTestTypeStatus(vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.EDIT),
-                                  'odometer-reading-icon-no-data': getTestTypeStatus(vehicleTest) !== commonFunctions.capitalizeString(testCompletionStatus.EDIT)}"
-                      [name]="getTestTypeStatus(vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.EDIT) ? 'checkmark' : 'arrow-forward'"
+                      [ngClass]="{'odometer-reading-icon-data': getTestTypeStatus(vehicle, vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.EDIT),
+                                  'odometer-reading-icon-no-data': getTestTypeStatus(vehicle, vehicleTest) !== commonFunctions.capitalizeString(testCompletionStatus.EDIT)}"
+                      [name]="getTestTypeStatus(vehicle, vehicleTest) === commonFunctions.capitalizeString(testCompletionStatus.EDIT) ? 'checkmark' : 'arrow-forward'"
                       *ngIf="!isTestAbandoned(vehicleTest)"></ion-icon>
           </button>
           <ion-item-options *ngIf="!isTestAbandoned(vehicleTest)">
